# project-A

./: demo1  readme.txt  sample.txt
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/: CMakeLists.txt  README.md
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/cmake/modules/: FindRTIDDS.cmake  FindRTIDDS_PRO.cmake  FindVINAIADASDDS.cmake  FindVINAIADASDDS_PRO.cmake
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/cmake/scripts/: armv8QNX7.0.0qcc_gpp5.4.0.cmake  x64Linux4gcc7.3.0.cmake
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/cmake/toolchains/: Toolchain_DriveAGX_QNX_AARCH64.cmake
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/example/camera_image/: CMakeLists.txt  camera_pub_example.cpp  camera_sub_example.cpp
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/example/helloworld/: CMakeLists.txt  README.md  pub.cpp  sub.cpp
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/scripts/: build_example.sh
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/utilities/ddslaunch/: README.md
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/utilities/ddstopic/: README.md
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/: README.md
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/vinai-adas-dds-micro-1.0.0/include/adas/dds/common/: exception.h  log.h  node_param.h  processor.h  signal_handle.h  spinlock.h  type_traits.h  utils.h
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/vinai-adas-dds-micro-1.0.0/include/adas/dds/idl/: idl_includes.h
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/vinai-adas-dds-micro-1.0.0/include/adas/dds/idl/adas/common/: ClockOffset.h  ClockOffsetPlugin.h  ClockOffsetSupport.h  Point2.h  Point2Plugin.h  Point2Support.h  Point3.h  Point3Plugin.h  Point3Support.h  Pose2.h  Pose2Array.h  Pose2ArrayPlugin.h  Pose2ArraySupport.h  Pose2Plugin.h  Pose2Support.h  Vector3f.h  Vector3fPlugin.h  Vector3fSupport.h
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/vinai-adas-dds-micro-1.0.0/include/adas/dds/idl/adas/control/: ControlCmd.h  ControlCmdPlugin.h  ControlCmdSupport.h  ControlMonitor.h  ControlMonitorPlugin.h  ControlMonitorSupport.h  Trajectories.h  TrajectoriesPlugin.h  TrajectoriesSupport.h  Trajectory.h  TrajectoryCoeff.h  TrajectoryCoeffPlugin.h  TrajectoryCoeffSupport.h  TrajectoryPlugin.h  TrajectoryPoint.h  TrajectoryPointPlugin.h  TrajectoryPointSupport.h  TrajectorySupport.h  Twist.h  TwistPlugin.h  TwistSupport.h  VehicleState.h  VehicleStatePlugin.h  VehicleStateSupport.h
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/vinai-adas-dds-micro-1.0.0/include/adas/dds/idl/adas/dw/: lane.h  lanePlugin.h  laneSupport.h  object.h  objectPlugin.h  objectSupport.h  objects.h  objectsPlugin.h  objectsSupport.h
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/vinai-adas-dds-micro-1.0.0/include/adas/dds/idl/adas/examples/: CameraImage.h  CameraImagePlugin.h  CameraImageSupport.h  HelloWorld.h  HelloWorldPlugin.h  HelloWorldSupport.h
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/vinai-adas-dds-micro-1.0.0/include/adas/dds/idl/adas/eyeQ4/: EyeQ4.h  EyeQ4Plugin.h  EyeQ4Support.h  LaneEyeQ4.h  LaneEyeQ4Plugin.h  LaneEyeQ4Support.h  LanesEyeQ4.h  LanesEyeQ4Plugin.h  LanesEyeQ4Support.h  NextLaneEyeQ4.h  NextLaneEyeQ4Plugin.h  NextLaneEyeQ4Support.h  ObjectEyeQ4.h  ObjectEyeQ4Plugin.h  ObjectEyeQ4Support.h  ObjectsEyeQ4.h  ObjectsEyeQ4Plugin.h  ObjectsEyeQ4Support.h  TrafficSignEyeQ4.h  TrafficSignEyeQ4Plugin.h  TrafficSignEyeQ4Support.h  TrafficSignsEyeQ4.h  TrafficSignsEyeQ4Plugin.h  TrafficSignsEyeQ4Support.h
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/vinai-adas-dds-micro-1.0.0/include/adas/dds/idl/adas/lane/: EyeqVehicleLine.h  EyeqVehicleLinePlugin.h  EyeqVehicleLineSupport.h  EyeqVehicleLines.h  EyeqVehicleLinesPlugin.h  EyeqVehicleLinesSupport.h  Lane.h  LaneBoundaries.h  LaneBoundariesPlugin.h  LaneBoundariesSupport.h  LaneBoundary.h  LaneBoundaryPlugin.h  LaneBoundaryPoly3.h  LaneBoundaryPoly3Plugin.h  LaneBoundaryPoly3Support.h  LaneBoundarySupport.h  LaneId.h  LaneIdPlugin.h  LaneIdSupport.h  LaneInformation.h  LaneInformationPlugin.h  LaneInformationSupport.h  Road.h  (+19 more)
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/vinai-adas-dds-micro-1.0.0/include/adas/dds/idl/builtin/: ShmemInfo.h  ShmemInfoPlugin.h  ShmemInfoSupport.h
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/vinai-adas-dds-micro-1.0.0/lib/armv8QNX7.0.0qcc_gpp5.4.0/: libvinai_adas_dds.so.1.0.0
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/vinai-adas-dds-pro-1.0.0/include/adas/dds/common/: base64.h  double_buffer.h  generic_timer.h  node_handle.h  node_handle_pro.h  spinlock.h  string.h  type_traits.h  version.h
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/vinai-adas-dds-pro-1.0.0/include/adas/dds/idl/builtin/: ShmemInfo.h  ShmemInfoPlugin.h  ShmemInfoSupport.h
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/vinai-adas-dds-pro-1.0.0/lib/armv8QNX7.0.0qcc_gpp5.4.0/: libvinai_adas_dds.so.1  libvinai_adas_dds.so.1.0.0  libvinai_adas_dds_idl.so.1
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/vinai-adas-dds-sdk/vinai-adas-dds-pro-1.0.0/lib/x64Linux4gcc7.3.0/: libvinai_adas_dds.so.1.0.0
Aurix-VinAI-ADAS-DDS-1.0.0-20210508/vinai-adas-dds/visualizer/: README.md
(+963 files in other folders)
